--- a/css/styles.css
+++ b/css/styles.css
@@ -12,18 +12,18 @@ input[type="email"] {
     margin-bottom: 20px;
     width: 250px;
     font-size: 16px;
-    border: 1px solid pink;
+    border: 1px solid black;
     border-radius: 30px;
 }
 
 input[type="text"]:focus,
 input[type="email"]:focus {
     outline: 0;
-    border-color: green;
+    border-color: hotpink;
 }
 
 textarea {
-    border: 1px solid pink;
+    border: 1px solid black;
     border-radius: 30px;
     width: 250px;
     height: 200px;
@@ -31,7 +31,7 @@ textarea {
 
 textarea:focus {
     outline: 0;
-    border-color: green;
+    border-color: hotpink;
 }
 
 input[type="submit"] {
@@ -56,6 +56,7 @@ input[type="submit"]:hover {
 .left {
     width: 300px;
     float: left;
+    clear: left;
 }
 
 .right {
